TextBox vertical alignment fix

--- a/styles/stepviz.scss
+++ b/styles/stepviz.scss
@@ -8,7 +8,6 @@
     }
     text {
       color: #000;
-      alignment-baseline: before-edge;
     }
     &.highlight {
       rect {
